[gd_scene load_steps=6 format=3 uid="uid://cwiguvu8np372"]

[ext_resource type="Texture2D" uid="uid://b5hyqxmy1yqg" path="res://assets/ui/card-slot.png" id="1_2eg73"]
[ext_resource type="Script" path="res://scenes/card/card.gd" id="1_fotnb"]
[ext_resource type="Texture2D" uid="uid://f7avfe2i30dh" path="res://assets/ui/card-background.png" id="1_riiuj"]
[ext_resource type="FontFile" uid="uid://ovxm1t36mm0h" path="res://assets/fonts/hefty-me.ttf" id="4_m20ke"]

[sub_resource type="LabelSettings" id="LabelSettings_8rgve"]
font = ExtResource("4_m20ke")
font_color = Color(1, 0, 0, 1)

[node name="Card" type="Control"]
custom_minimum_size = Vector2(40, 55)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fotnb")

[node name="Placeholder" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_right = 40.0
offset_bottom = 55.0
texture = ExtResource("1_2eg73")

[node name="CardButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 55.0
pivot_offset = Vector2(20, 28)
texture_normal = ExtResource("1_riiuj")

[node name="Label" type="Label" parent="CardButton"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 32.0
offset_bottom = 18.0
text = "Stuff"
label_settings = SubResource("LabelSettings_8rgve")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="button_down" from="CardButton" to="." method="_on_card_button_button_down"]
[connection signal="button_up" from="CardButton" to="." method="_on_card_button_button_up"]
[connection signal="mouse_entered" from="CardButton" to="." method="_on_card_button_mouse_entered"]
[connection signal="mouse_exited" from="CardButton" to="." method="_on_card_button_mouse_exited"]
